--- a/tests/PrimeTables.Tests/PrimeTables.Tests.csproj
+++ b/tests/PrimeTables.Tests/PrimeTables.Tests.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PrimeSequenceGeneratorTests.cs" />
+    <Compile Include="PrimeTableGeneratorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
