Interface and stub implementation for string text output of prime table.

--- a/src/PrimeTables/PrimeTables.csproj
+++ b/src/PrimeTables/PrimeTables.csproj
@@ -40,9 +40,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IPrimeTableGenerator.cs" />
+    <Compile Include="IPrimeTableTextView.cs" />
     <Compile Include="PrimeSequenceGenerator.cs" />
     <Compile Include="IPrimeSequenceGenerator.cs" />
     <Compile Include="NaivePrimeTableGenerator.cs" />
+    <Compile Include="PrimeTableTextView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
