--- a/tests/PrimeTables.Tests/PrimeTables.Tests.csproj
+++ b/tests/PrimeTables.Tests/PrimeTables.Tests.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="PrimeSequenceGeneratorTests.cs" />
     <Compile Include="PrimeTableGeneratorTests.cs" />
+    <Compile Include="PrimeTableViewTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
