Added exception help text to IPrimeTableGenerator for clients/intellisense Changed exception to ArgumentOutOfRangeException Moved contract class into own file

--- a/src/PrimeTables/PrimeTables.csproj
+++ b/src/PrimeTables/PrimeTables.csproj
@@ -131,6 +131,7 @@
     <Compile Include="PrimeSequenceGenerator.cs" />
     <Compile Include="IPrimeSequenceGenerator.cs" />
     <Compile Include="NaivePrimeTableGenerator.cs" />
+    <Compile Include="PrimeTableGeneratorContract.cs" />
     <Compile Include="PrimeTableTextView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
