Added implementation of IPrimeSequenceGenerator which uses Task parallelism in an attempt to speed up computation.

--- a/src/PrimeTables/PrimeTables.csproj
+++ b/src/PrimeTables/PrimeTables.csproj
@@ -128,6 +128,7 @@
   <ItemGroup>
     <Compile Include="IPrimeTableGenerator.cs" />
     <Compile Include="IPrimeTableTextView.cs" />
+    <Compile Include="ParallelPrimeSequenceGenerator.cs" />
     <Compile Include="PrimeSequenceGenerator.cs" />
     <Compile Include="IPrimeSequenceGenerator.cs" />
     <Compile Include="NaivePrimeTableGenerator.cs" />
