Can't/shouldn't have a contract on an implementer of an interface method - contract should be at the interface level (otherwise implementer violates Liskov substitutability)

--- a/src/PrimeTables/PrimeTables.csproj
+++ b/src/PrimeTables/PrimeTables.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Tables\PrimeTableGeneratorContract.cs" />
     <Compile Include="Views\IPrimeTableTextView.cs" />
     <Compile Include="Views\PrimeTableTextView.cs" />
+    <Compile Include="Views\PrimeTableViewContract.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
